// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelfServeComponent message bar and spinner snapshots 1`] = `
<div
  data-testid="DataExplorerRoot"
  style={
    {
      "overflowX": "auto",
    }
  }
>
  <Stack
    tokens={
      {
        "childrenGap": 5,
        "padding": 10,
      }
    }
  >
    <StackItem>
      <StyledCommandBarBase
        items={
          [
            {
              "disabled": true,
              "iconProps": {
                "iconName": "Save",
              },
              "key": "save",
              "onClick": [Function],
              "text": "Save",
            },
            {
              "buttonStyles": {
                "root": {
                  "paddingLeft": 20,
                },
              },
              "disabled": true,
              "iconProps": {
                "iconName": "Undo",
              },
              "key": "discard",
              "onClick": [Function],
              "text": "Discard",
            },
            {
              "buttonStyles": {
                "root": {
                  "paddingLeft": 20,
                },
              },
              "disabled": false,
              "iconProps": {
                "iconName": "Refresh",
              },
              "key": "refresh",
              "onClick": [Function],
              "text": "Refresh",
            },
          ]
        }
        styles={
          {
            "root": {
              "paddingLeft": 0,
            },
          }
        }
      />
      <Separator
        styles={
          {
            "root": {
              "height": 1,
              "padding": 0,
              "selectors": {
                "::before": {
                  "background": undefined,
                },
              },
            },
          }
        }
      />
    </StackItem>
    <StyledMessageBar
      messageBarType={0}
    >
      <Text>
        refresh performed successfully
      </Text>
    </StyledMessageBar>
    <SmartUiComponent
      currentValues={
        Map {
          "throughput" => {
            "disabled": false,
            "hidden": false,
            "value": 450,
          },
          "analyticalStore" => {
            "disabled": false,
            "hidden": false,
            "value": false,
          },
          "database" => {
            "disabled": false,
            "hidden": false,
            "value": "db2",
          },
        }
      }
      descriptor={
        {
          "initialize": [MockFunction] {
            "calls": [
              [],
              [],
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
            ],
          },
          "inputNames": [
            "throughput",
            "analyticalStore",
            "database",
          ],
          "onRefresh": [MockFunction] {
            "calls": [
              [],
              [],
              [],
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
            ],
          },
          "onSave": [MockFunction] {
            "calls": [
              [
                Map {
                  "throughput" => {
                    "disabled": false,
                    "hidden": false,
                    "value": 450,
                  },
                  "analyticalStore" => {
                    "disabled": false,
                    "hidden": false,
                    "value": false,
                  },
                  "database" => {
                    "disabled": false,
                    "hidden": false,
                    "value": "db2",
                  },
                },
                Map {
                  "throughput" => {
                    "disabled": false,
                    "hidden": false,
                    "value": 450,
                  },
                  "analyticalStore" => {
                    "disabled": false,
                    "hidden": false,
                    "value": false,
                  },
                  "database" => {
                    "disabled": false,
                    "hidden": false,
                    "value": "db2",
                  },
                },
              ],
              [
                Map {
                  "throughput" => {
                    "disabled": false,
                    "hidden": false,
                    "value": 450,
                  },
                  "analyticalStore" => {
                    "disabled": false,
                    "hidden": false,
                    "value": false,
                  },
                  "database" => {
                    "disabled": false,
                    "hidden": false,
                    "value": "db2",
                  },
                },
                Map {
                  "throughput" => {
                    "disabled": false,
                    "hidden": false,
                    "value": 450,
                  },
                  "analyticalStore" => {
                    "disabled": false,
                    "hidden": false,
                    "value": false,
                  },
                  "database" => {
                    "disabled": false,
                    "hidden": false,
                    "value": "db2",
                  },
                },
              ],
            ],
            "results": [
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
            ],
          },
          "root": {
            "children": [
              {
                "id": "throughput",
                "info": undefined,
                "input": {
                  "dataFieldName": "throughput",
                  "defaultValue": 400,
                  "labelTKey": "Throughput (input)",
                  "max": 500,
                  "min": 400,
                  "placeholderTKey": undefined,
                  "step": 10,
                  "type": "number",
                  "uiType": "Spinner",
                },
              },
              {
                "id": "containerId",
                "info": undefined,
                "input": {
                  "dataFieldName": "containerId",
                  "labelTKey": "Container id",
                  "placeholderTKey": undefined,
                  "type": "string",
                },
              },
              {
                "id": "analyticalStore",
                "info": undefined,
                "input": {
                  "dataFieldName": "analyticalStore",
                  "defaultValue": true,
                  "falseLabelTKey": "Disabled",
                  "labelTKey": "Analytical Store",
                  "placeholderTKey": undefined,
                  "trueLabelTKey": "Enabled",
                  "type": "boolean",
                },
              },
              {
                "id": "database",
                "info": undefined,
                "input": {
                  "choices": [
                    {
                      "key": "db1",
                      "labelTKey": "Database 1",
                    },
                    {
                      "key": "db2",
                      "labelTKey": "Database 2",
                    },
                    {
                      "key": "db3",
                      "labelTKey": "Database 3",
                    },
                  ],
                  "dataFieldName": "database",
                  "defaultKey": "db2",
                  "labelTKey": "Database",
                  "placeholderTKey": undefined,
                  "type": "object",
                },
              },
            ],
            "id": "root",
            "info": {
              "link": {
                "href": "https://aka.ms/azure-cosmos-db-pricing",
                "textTKey": "More Details",
              },
              "messageTKey": "Start at $24/mo per database",
            },
          },
        }
      }
      disabled={true}
      getTranslation={[Function]}
      onError={[Function]}
      onInputChange={[Function]}
    />
  </Stack>
</div>
`;

exports[`SelfServeComponent message bar and spinner snapshots 2`] = `
<div
  data-testid="DataExplorerRoot"
  style={
    {
      "overflowX": "auto",
    }
  }
>
  <Stack
    tokens={
      {
        "childrenGap": 5,
        "padding": 10,
      }
    }
  >
    <StackItem>
      <StyledCommandBarBase
        items={
          [
            {
              "disabled": true,
              "iconProps": {
                "iconName": "Save",
              },
              "key": "save",
              "onClick": [Function],
              "text": "Save",
            },
            {
              "buttonStyles": {
                "root": {
                  "paddingLeft": 20,
                },
              },
              "disabled": true,
              "iconProps": {
                "iconName": "Undo",
              },
              "key": "discard",
              "onClick": [Function],
              "text": "Discard",
            },
            {
              "buttonStyles": {
                "root": {
                  "paddingLeft": 20,
                },
              },
              "disabled": false,
              "iconProps": {
                "iconName": "Refresh",
              },
              "key": "refresh",
              "onClick": [Function],
              "text": "Refresh",
            },
          ]
        }
        styles={
          {
            "root": {
              "paddingLeft": 0,
            },
          }
        }
      />
      <Separator
        styles={
          {
            "root": {
              "height": 1,
              "padding": 0,
              "selectors": {
                "::before": {
                  "background": undefined,
                },
              },
            },
          }
        }
      />
    </StackItem>
    <SmartUiComponent
      currentValues={
        Map {
          "throughput" => {
            "disabled": false,
            "hidden": false,
            "value": 450,
          },
          "analyticalStore" => {
            "disabled": false,
            "hidden": false,
            "value": false,
          },
          "database" => {
            "disabled": false,
            "hidden": false,
            "value": "db2",
          },
        }
      }
      descriptor={
        {
          "initialize": [MockFunction] {
            "calls": [
              [],
              [],
              [],
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
            ],
          },
          "inputNames": [
            "throughput",
            "analyticalStore",
            "database",
          ],
          "onRefresh": [MockFunction] {
            "calls": [
              [],
              [],
              [],
              [],
              [],
              [],
              [],
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
            ],
          },
          "onSave": [MockFunction] {
            "calls": [
              [
                Map {
                  "throughput" => {
                    "disabled": false,
                    "hidden": false,
                    "value": 450,
                  },
                  "analyticalStore" => {
                    "disabled": false,
                    "hidden": false,
                    "value": false,
                  },
                  "database" => {
                    "disabled": false,
                    "hidden": false,
                    "value": "db2",
                  },
                },
                Map {
                  "throughput" => {
                    "disabled": false,
                    "hidden": false,
                    "value": 450,
                  },
                  "analyticalStore" => {
                    "disabled": false,
                    "hidden": false,
                    "value": false,
                  },
                  "database" => {
                    "disabled": false,
                    "hidden": false,
                    "value": "db2",
                  },
                },
              ],
              [
                Map {
                  "throughput" => {
                    "disabled": false,
                    "hidden": false,
                    "value": 450,
                  },
                  "analyticalStore" => {
                    "disabled": false,
                    "hidden": false,
                    "value": false,
                  },
                  "database" => {
                    "disabled": false,
                    "hidden": false,
                    "value": "db2",
                  },
                },
                Map {
                  "throughput" => {
                    "disabled": false,
                    "hidden": false,
                    "value": 450,
                  },
                  "analyticalStore" => {
                    "disabled": false,
                    "hidden": false,
                    "value": false,
                  },
                  "database" => {
                    "disabled": false,
                    "hidden": false,
                    "value": "db2",
                  },
                },
              ],
              [
                Map {
                  "throughput" => {
                    "disabled": false,
                    "hidden": false,
                    "value": 450,
                  },
                  "analyticalStore" => {
                    "disabled": false,
                    "hidden": false,
                    "value": false,
                  },
                  "database" => {
                    "disabled": false,
                    "hidden": false,
                    "value": "db2",
                  },
                },
                Map {
                  "throughput" => {
                    "disabled": false,
                    "hidden": false,
                    "value": 450,
                  },
                  "analyticalStore" => {
                    "disabled": false,
                    "hidden": false,
                    "value": false,
                  },
                  "database" => {
                    "disabled": false,
                    "hidden": false,
                    "value": "db2",
                  },
                },
              ],
            ],
            "results": [
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
              {
                "type": "return",
                "value": Promise {},
              },
            ],
          },
          "root": {
            "children": [
              {
                "id": "throughput",
                "info": undefined,
                "input": {
                  "dataFieldName": "throughput",
                  "defaultValue": 400,
                  "labelTKey": "Throughput (input)",
                  "max": 500,
                  "min": 400,
                  "placeholderTKey": undefined,
                  "step": 10,
                  "type": "number",
                  "uiType": "Spinner",
                },
              },
              {
                "id": "containerId",
                "info": undefined,
                "input": {
                  "dataFieldName": "containerId",
                  "labelTKey": "Container id",
                  "placeholderTKey": undefined,
                  "type": "string",
                },
              },
              {
                "id": "analyticalStore",
                "info": undefined,
                "input": {
                  "dataFieldName": "analyticalStore",
                  "defaultValue": true,
                  "falseLabelTKey": "Disabled",
                  "labelTKey": "Analytical Store",
                  "placeholderTKey": undefined,
                  "trueLabelTKey": "Enabled",
                  "type": "boolean",
                },
              },
              {
                "id": "database",
                "info": undefined,
                "input": {
                  "choices": [
                    {
                      "key": "db1",
                      "labelTKey": "Database 1",
                    },
                    {
                      "key": "db2",
                      "labelTKey": "Database 2",
                    },
                    {
                      "key": "db3",
                      "labelTKey": "Database 3",
                    },
                  ],
                  "dataFieldName": "database",
                  "defaultKey": "db2",
                  "labelTKey": "Database",
                  "placeholderTKey": undefined,
                  "type": "object",
                },
              },
            ],
            "id": "root",
            "info": {
              "link": {
                "href": "https://aka.ms/azure-cosmos-db-pricing",
                "textTKey": "More Details",
              },
              "messageTKey": "Start at $24/mo per database",
            },
          },
        }
      }
      disabled={false}
      getTranslation={[Function]}
      onError={[Function]}
      onInputChange={[Function]}
    />
  </Stack>
</div>
`;

exports[`SelfServeComponent message bar and spinner snapshots 3`] = `
<div
  data-testid="DataExplorerRoot"
  style={
    {
      "overflowX": "auto",
    }
  }
>
  <Stack
    tokens={
      {
        "childrenGap": 5,
        "padding": 10,
      }
    }
  >
    <StackItem>
      <StyledCommandBarBase
        items={
          [
            {
              "disabled": true,
              "iconProps": {
                "iconName": "Save",
              },
              "key": "save",
              "onClick": [Function],
              "text": "Save",
            },
            {
              "buttonStyles": {
                "root": {
                  "paddingLeft": 20,
                },
              },
              "disabled": true,
              "iconProps": {
                "iconName": "Undo",
              },
              "key": "discard",
              "onClick": [Function],
              "text": "Discard",
            },
            {
              "buttonStyles": {
                "root": {
                  "paddingLeft": 20,
                },
              },
              "disabled": true,
              "iconProps": {
                "iconName": "Refresh",
              },
              "key": "refresh",
              "onClick": [Function],
              "text": "Refresh",
            },
          ]
        }
        styles={
          {
            "root": {
              "paddingLeft": 0,
            },
          }
        }
      />
      <Separator
        styles={
          {
            "root": {
              "height": 1,
              "padding": 0,
              "selectors": {
                "::before": {
                  "background": undefined,
                },
              },
            },
          }
        }
      />
    </StackItem>
    <StyledSpinnerBase
      size={3}
    />
  </Stack>
</div>
`;

exports[`SelfServeComponent message bar and spinner snapshots 4`] = `
<StyledMessageBar
  messageBarType={1}
>
  <Text>
    sample error message
  </Text>
</StyledMessageBar>
`;

exports[`SelfServeComponent should render and honor save, discard, refresh actions 1`] = `
<div
  data-testid="DataExplorerRoot"
  style={
    {
      "overflowX": "auto",
    }
  }
>
  <Stack
    tokens={
      {
        "childrenGap": 5,
        "padding": 10,
      }
    }
  >
    <StackItem>
      <StyledCommandBarBase
        items={
          [
            {
              "disabled": true,
              "iconProps": {
                "iconName": "Save",
              },
              "key": "save",
              "onClick": [Function],
              "text": "Save",
            },
            {
              "buttonStyles": {
                "root": {
                  "paddingLeft": 20,
                },
              },
              "disabled": true,
              "iconProps": {
                "iconName": "Undo",
              },
              "key": "discard",
              "onClick": [Function],
              "text": "Discard",
            },
            {
              "buttonStyles": {
                "root": {
                  "paddingLeft": 20,
                },
              },
              "disabled": false,
              "iconProps": {
                "iconName": "Refresh",
              },
              "key": "refresh",
              "onClick": [Function],
              "text": "Refresh",
            },
          ]
        }
        styles={
          {
            "root": {
              "paddingLeft": 0,
            },
          }
        }
      />
      <Separator
        styles={
          {
            "root": {
              "height": 1,
              "padding": 0,
              "selectors": {
                "::before": {
                  "background": undefined,
                },
              },
            },
          }
        }
      />
    </StackItem>
    <SmartUiComponent
      currentValues={
        Map {
          "throughput" => {
            "disabled": false,
            "hidden": false,
            "value": 450,
          },
          "analyticalStore" => {
            "disabled": false,
            "hidden": false,
            "value": false,
          },
          "database" => {
            "disabled": false,
            "hidden": false,
            "value": "db2",
          },
        }
      }
      descriptor={
        {
          "initialize": [MockFunction] {
            "calls": [
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": Promise {},
              },
            ],
          },
          "inputNames": [
            "throughput",
            "analyticalStore",
            "database",
          ],
          "onRefresh": [MockFunction] {
            "calls": [
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": Promise {},
              },
            ],
          },
          "onSave": [MockFunction],
          "root": {
            "children": [
              {
                "id": "throughput",
                "info": undefined,
                "input": {
                  "dataFieldName": "throughput",
                  "defaultValue": 400,
                  "labelTKey": "Throughput (input)",
                  "max": 500,
                  "min": 400,
                  "placeholderTKey": undefined,
                  "step": 10,
                  "type": "number",
                  "uiType": "Spinner",
                },
              },
              {
                "id": "containerId",
                "info": undefined,
                "input": {
                  "dataFieldName": "containerId",
                  "labelTKey": "Container id",
                  "placeholderTKey": undefined,
                  "type": "string",
                },
              },
              {
                "id": "analyticalStore",
                "info": undefined,
                "input": {
                  "dataFieldName": "analyticalStore",
                  "defaultValue": true,
                  "falseLabelTKey": "Disabled",
                  "labelTKey": "Analytical Store",
                  "placeholderTKey": undefined,
                  "trueLabelTKey": "Enabled",
                  "type": "boolean",
                },
              },
              {
                "id": "database",
                "info": undefined,
                "input": {
                  "choices": [
                    {
                      "key": "db1",
                      "labelTKey": "Database 1",
                    },
                    {
                      "key": "db2",
                      "labelTKey": "Database 2",
                    },
                    {
                      "key": "db3",
                      "labelTKey": "Database 3",
                    },
                  ],
                  "dataFieldName": "database",
                  "defaultKey": "db2",
                  "labelTKey": "Database",
                  "placeholderTKey": undefined,
                  "type": "object",
                },
              },
            ],
            "id": "root",
            "info": {
              "link": {
                "href": "https://aka.ms/azure-cosmos-db-pricing",
                "textTKey": "More Details",
              },
              "messageTKey": "Start at $24/mo per database",
            },
          },
        }
      }
      disabled={false}
      getTranslation={[Function]}
      onError={[Function]}
      onInputChange={[Function]}
    />
  </Stack>
</div>
`;
